Updated PUTs
/userController, /agencyController and /scoreController didn't have finished PUT requests. Fixed those and updated api-docs.
